--- a/src/main/resources/templates/team-list.html
+++ b/src/main/resources/templates/team-list.html
@@ -2,9 +2,12 @@
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>野球チーム一覧</title>
+<title>セ・リーグ一覧</title>
 </head>
 <body>
 	<h1>野球チーム一覧</h1>
+	<div th:each="team:${teamList}">
+		<a th:href="@{/team/detail}" th:object="${team}"><span th:text="*{teamName}"></span></a>
+	</div>
 </body>
 </html>
