--- a/src/main/resources/templates/team-list.html
+++ b/src/main/resources/templates/team-list.html
@@ -7,7 +7,8 @@
 <body>
 	<h1>野球チーム一覧</h1>
 	<div th:each="team:${teamList}">
-		<a th:href="@{/team/detail}" th:object="${team}"><span th:text="*{teamName}"></span></a>
+		<a th:href="@{/team/detail}"><span th:text="${team.teamName}"></span></a><br>
+		<br>
 	</div>
 </body>
 </html>
