--- a/src/main/resources/templates/team-list.html
+++ b/src/main/resources/templates/team-list.html
@@ -7,7 +7,7 @@
 <body>
 	<h1>野球チーム一覧</h1>
 	<div th:each="team:${teamList}">
-		<a th:href="@{'/team/detail' + ${team.id}}"><span th:text="${team.teamName}"></span></a><br>
+		<a th:href="@{'/team/detail?id=' + ${team.id}}"><span th:text="${team.teamName}"></span></a><br>
 		<br>
 	</div>
 </body>
