Hotelドメインの作成

--- a/src/main/resources/templates/team-detail.html
+++ b/src/main/resources/templates/team-detail.html
@@ -18,5 +18,8 @@
         	<br th:if="${!stat.last}"/>
 		</th:block>
 	</th:block>
+	<form th:action="@{/team/list}" method="post">
+		<button>戻る</button>
+	</form>
 </body>
 </html>
