--- a/src/main/resources/templates/hotel/hotel.html
+++ b/src/main/resources/templates/hotel/hotel.html
@@ -2,9 +2,28 @@
 <html lang="ja" xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>金額入力画面</title>
+<title>ホテル検索画面</title>
 </head>
 <body>
-	
+	<h5>ホテル検索</h5>
+	<form th:action="@{/hotel/result}" method="post" th:object="${hotel}">
+		<input type="text" th:field="*{price}"
+			oninput="value = value.replace(/[^0-9]+/i,'');" />&nbsp;円以下<br>
+		<button>検索</button>
+	</form>
+	<table th:if="${hotel.price}">
+		<tr>
+			<td>ホテル名</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>最寄駅</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td>価格</td>
+			<td></td>
+		</tr>
+	</table>
 </body>
 </html>
